force-app/main/default/objects/Investing_Entity__c/Investing_Entity__c.object-meta.xml
<CustomObject>
    <label>Investing Entity</label>
    <nameField>
        <label>Investing Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investing Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>