force-app/main/default/objects/Investing_Entity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Investing Entities</relationshipLabel>
    <relationshipName>Investing_Entities2</relationshipName>
    <type>Lookup</type>
</CustomField>