force-app/main/default/objects/Investing_Entity__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Estate or Trust</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
                <label>Partnership or LLC</label>
            </value>
            <value>
                <fullName>Exempt Organization</fullName>
            </value>
            <value>
                <fullName>IRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>