force-app/main/default/objects/Investing_Entity__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offering</label>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>Investing Entities</relationshipLabel>
    <relationshipName>Investing_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>